[package]
name = "vnote-cli"
version = "0.1.0"
authors = ["Willem Victor"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.32"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "1.7"
dirs = "1.0.4"
regex = "1"
