[package]
name = "vnote-cli"
version = "1.0.2"
authors = ["Willem Victor"]
edition = "2018"

[dependencies]
ansi_term = "0.11"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32"
colored = "1.7"
dirs = "1.0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"] }

[[bin]]
name = "vnote"
path = "src/main.rs"
